--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <div class="body">
                     <div class="naming">
                               <h1>I Am <br> Web Designer </h1>
-                              <p>I am a web developer, proficient in coding and maitaining <br>websites to ensure functionality and responsiveness</p>
+                              <p>I am a web developer, proficient in coding and maintaining <br>websites to ensure functionality and responsiveness</p>
                               <a href="./resume.pdf" download class="cv-button">
                                         <button>
                                           <i class="fa-solid fa-file-invoice"></i>
